CMAKE_MINIMUM_REQUIRED(VERSION 3.15)

PROJECT(chaos)
SET(CMAKE_CXX_STANDARD 20) # 设置编译标准为C++20
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/${CMAKE_VS_PLATFORM_NAME})

# add custom definitions
ADD_DEFINITIONS(-DGLOG_CUSTOM_PREFIX_SUPPORT)
ADD_DEFINITIONS(-DGLOG_NO_ABBREVIATED_SEVERITIES)

# src of chaos
ADD_SUBDIRECTORY(io)
ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(tests)
ADD_SUBDIRECTORY(sqlite)

IF(MSVC)
    ADD_DEFINITIONS(-D_USE_MATH_DEFINES)
    ADD_DEFINITIONS(-DNOMINMAX)
ENDIF()