SET(THIRDPARTY_PREFIX_DIR "D:/Program Files (x86)")

LINK_DIRECTORIES(
     ${THIRDPARTY_PREFIX_DIR}/gtest/lib
)

INCLUDE_DIRECTORIES(
    .
    ./include
    ../sqlite
    ${THIRDPARTY_PREFIX_DIR}/gtest/include
)

IF (CMAKE_BUILD_TYPE STREQUAL Debug)
    LINK_LIBRARIES(gtestd)
ELSE()
    LINK_LIBRARIES(gtest)
ENDIF()

# FIND_PACKAGE(GTest)
# INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
# MESSAGE(${GTEST_INCLUDE_DIRS})
# MESSAGE(${GTEST_BOTH_LIBRARIES})
# MESSAGE(${GTEST_LIBRARIES})
# MESSAGE(${GTEST_MAIN_LIBRARIES})

AUX_SOURCE_DIRECTORY(. SRCS)

LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib/)

ADD_EXECUTABLE(otest ${SRCS})
TARGET_LINK_LIBRARIES(
    otest
    ${GTEST_BOTH_LIBRARIES}
    sqlite)
